Hopefully fixed overflow

--- a/project/src/components/DeleteModal/DeleteModal.css
+++ b/project/src/components/DeleteModal/DeleteModal.css
@@ -1,25 +1,28 @@
 .modal-container {
     position: fixed;
-    width: 100vw;
-    height: 100vh;
     left: 0;
     top: 0;
+    right: 0;
+    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .backdrop {
-    position: inherit;
+    position: fixed;
     background-color: var(--darkBlue);
-    width: 100%;
-    height: 100%;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
     opacity: 0.8;
 }
 
 .modal {
     background-color: var(--white);
-    z-index: 1;
+    z-index: 2;
     padding: 2rem;
     border-radius: 1rem;
     width: 300px;
