--- a/project/src/index.css
+++ b/project/src/index.css
@@ -22,6 +22,7 @@ body {
     font-family: "Rubik", sans-serif;
     font-size: 16px;
     background-color: var(--veryLightGray);
+    overflow-x: hidden;
 }
 
 main {
@@ -33,4 +34,18 @@ main {
     width: 40px;
     height: 40px;
     border-radius: 100%;
+}
+
+.attribution {
+    text-align: center;
+}
+
+.attribution br {
+    display: block;
+}
+
+@media (min-width: 800px) {
+    .attribution br {
+        display: none;
+    }
 }
